<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.registor.SignUpFragment">

    <ImageView
        android:id="@+id/iv_backBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="24dp"
        android:src="@drawable/baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loginUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/gilroy_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_backBtn"
        tools:ignore="HardcodedText,SpUsage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_constrainL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintVertical_bias="0.44"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="14dp"
            android:fontFamily="@font/gilroy_semi_bold"
            android:textColor="#312E49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_email"
            android:padding="6dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_firstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_first_name"
                android:textSize="12dp"
                android:fontFamily="@font/gilroy_medium"
                tools:ignore="SpUsage" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="14dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gilroy_semi_bold"
            android:textColor="#312E49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_firstName"
            tools:ignore="SpUsage" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_email"
            android:padding="6dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_lastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_last_name"
                android:textSize="12dp"
                android:fontFamily="@font/gilroy_medium"
                tools:ignore="SpUsage" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_titleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textSize="14dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gilroy_semi_bold"
            android:textColor="#312E49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_lastName"
            tools:ignore="SpUsage" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_email"
            android:padding="6dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titleEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email"
                android:textSize="12dp"
                android:fontFamily="@font/gilroy_medium"
                tools:ignore="SpUsage" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_titlePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="14dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gilroy_semi_bold"
            android:textColor="#312E49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_email"
            tools:ignore="SpUsage" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_lock"
            android:padding="6dp"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titlePassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_password"
                android:textSize="12dp"
                android:fontFamily="@font/gilroy_medium"
                tools:ignore="SpUsage" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_description"
            android:textColor="#312E49"
            android:gravity="top"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_password"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/tv_continue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_background"
        app:layout_constraintTop_toBottomOf="@id/cl_constrainL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue">

        <TextView
            android:id="@+id/tv_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already signed up?"
            android:textColor="#747980"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login "
            android:layout_marginStart="4dp"
            android:textColor="#2805FF"
            app:layout_constraintBottom_toBottomOf="@id/tv_tv"
            app:layout_constraintStart_toEndOf="@id/tv_tv"
            app:layout_constraintTop_toTopOf="@id/tv_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>