<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forgot.VerificationNextFragment">

    <ImageView
        android:id="@+id/iv_backBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="8dp"
        android:layout_margin="24dp"
        android:src="@drawable/baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_titleForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textSize="32sp"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/gilroy_bold_700"
        android:textColor="#4E4B66"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_backBtn"/>

    <TextView
        android:id="@+id/tv_titlePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/new_password"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_regular_400"
        android:textColor="#4E4B66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titleForgot"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_symbol"
        android:textSize="14sp"
        android:fontFamily="@font/gilroy_regular_400"
        android:textColor="#C30052"
        app:layout_constraintBottom_toBottomOf="@id/tv_titlePassword"
        app:layout_constraintStart_toEndOf="@id/tv_titlePassword"
        app:layout_constraintTop_toTopOf="@id/tv_titlePassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titlePassword">
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:fontFamily="@font/gilroy_regular_400"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_titleConformPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password"
        android:layout_marginHorizontal="24dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gilroy_regular_400"
        android:textColor="#4E4B66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_symbol"
        android:textSize="14sp"
        android:fontFamily="@font/gilroy_regular_400"
        android:textColor="#C30052"
        app:layout_constraintBottom_toBottomOf="@id/tv_titleConformPassword"
        app:layout_constraintStart_toEndOf="@id/tv_titleConformPassword"
        app:layout_constraintTop_toTopOf="@id/tv_titleConformPassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_conformPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titleConformPassword">
        <EditText
            android:id="@+id/et_conformPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:fontFamily="@font/gilroy_regular_400"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/shape_btn_background"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>